// Copyright 2024 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.provisioning.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/provisioning/v1;provisioningv1";

// ProvisioningService provides methods to manage Provisioning resources.
service ProvisioningService {
  // DeleteDownstreamProvisioningStates deletes all Identity Center provisioning state for a given downstream.
  rpc DeleteDownstreamProvisioningStates(DeleteDownstreamProvisioningStatesRequest) returns (google.protobuf.Empty);
}

// DeleteDownstreamProvisioningStatesRequest is a request to delete all provisioning states for
// a given DownstreamId.
message DeleteDownstreamProvisioningStatesRequest {
  // DownstreamId identifies the downstream service that this state applies to.
  string downstream_id = 1;
}
